# CppGame

./: .gitignore  CMakeLists.txt  menu.psd
saves/: save.txt
src/: field.cpp  field.h  gamescene.cpp  gamescene.h  madDash.cpp  madDash.h  main.cpp  utils.cpp  utils.h
src/Button/: button.cpp  button.h
src/Field/: field.cpp  field.h
src/GameScene/: gamescene.cpp  gamescene.h
src/Menu/: menu.cpp  menu.h
src/Player/: maddash.cpp  maddash.h
src/Utils/: utils.cpp  utils.h
